# bevy_game_template

./: Cargo.toml  README.md  bevy_game-86974d83976ee263.js  bevy_game-beabc933e995a73d.js  index.html  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yaml
mobile/: Cargo.toml  Makefile  manifest.yaml
mobile/mobile.xcodeproj/: project.pbxproj
mobile/src/: lib.rs
src/: audio.rs  lib.rs  loading.rs  main.rs  menu.rs  player.rs
src/actions/: mod.rs
